[package]
name = "mcbbs_helper"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

admin = []

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1.3.9"
chrono = "0.4.15"
webbrowser = "0.5.5"