[package]
name = "mcbbs_helper"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto="fat"

[features]

admin = []

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }
regex = "1.3.9"
chrono = "0.4.15"
webbrowser = "*"